Add In-Memory Rate Limiter For Endpoints (#10)
