# api/docs/swagger.json
@@ -40,7 +40,7 @@
                     "200": {
                         "description": "JWT token",
                         "schema": {
-                            "$ref": "#/definitions/response.JwtReponse"
+                            "$ref": "#/definitions/response.JwtResponse"
                         }
                     },
                     "400": {
@@ -165,6 +165,12 @@
                             "$ref": "#/definitions/response.ResponseErrorModel"
                         }
                     },
+                    "429": {
+                        "description": "Rate Limit Exceeded",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseErrorModel"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -215,6 +221,12 @@
                             "$ref": "#/definitions/response.ResponseErrorModel"
                         }
                     },
+                    "429": {
+                        "description": "Rate Limit Exceeded",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseErrorModel"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -255,7 +267,7 @@
                 }
             }
         },
-        "response.JwtReponse": {
+        "response.JwtResponse": {
             "type": "object",
             "properties": {
                 "jwt": {
